--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ imbalanced-learn==0.11.0
 
 # === DATA VALIDATION ===
 pandera==0.17.2
+multimethod<=1.9.1
 
 # === EXPERIMENT TRACKING & REGISTRY (Modernized) ===
 mlflow==2.13.0
