--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -45,4 +45,4 @@ jobs:
         # Add specific files we expect to change
         git add models/ reports/ data/processed/
         # Commit only if there are changes
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update: Model and Reports [skip ci]" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update: Model and Reports [skip ci]" && git pull --rebase && git push)
